<resources>
    <string name="app_name">MOT</string>
    <string name="navigation_menu_item_recent_payments_title">Recent payments</string>
    <string name="navigation_menu_item_categories_title">Categories</string>
    <string name="navigation_menu_item_statistic_title">Statistic</string>
    <string name="navigation_menu_item_about_title">About</string>
    <string name="navigation_view_logo" translatable="false">navigation view logo</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>

    <!--fragment about-->
    <string name="about_text">"\nHello!\n\nThis is educational project, the main goal of which is to show my knowledge, skills and techniques in programming android applications.\n\n\nThis application uses MPChart Android library developed by Phillip Jahoda. Distributed under license Apache version 2.0"</string>
    <string name="feedback_text">Contacts for feedback and propositions: \nmotappsup@gmail.com</string>

    <!--build in categories section-->
    <string name="no_category_category_name">No category</string>
    <string name="build_in_category_food">Food</string>
    <string name="build_in_category_communication_services">Communication services</string>
    <string name="build_in_category_clothing">Clothing</string>
    <string name="build_in_category_insurance">Insurance</string>
    <string name="build_in_category_transport">Transport</string>
    <string name="build_in_category_bills">Bills</string>

    <!--dialog section-->
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_category_item_menu_title">Category options</string>
    <string name="dialog_category_add_action_title">New category</string>
    <string name="dialog_category_hint">Name</string>
    <string name="dialog_category_edit_action_title">Rename category</string>
    <string name="dialog_empty_category_name_title">Invalid name</string>
    <string name="dialog_empty_category_name_message">Category name cannot be blank</string>
    <string name="dialog_category_options_item_rename">Rename</string>
    <string name="dialog_category_options_item_delete">Delete</string>
    <string name="dialog_payment_options_title">Payment options</string>
    <string name="dialog_payment_options_item_edit">Edit</string>
    <string name="dialog_payment_options_item_delete">Delete</string>
    <string name="dialog_are_you_sure_title">Delete payment?</string>


    <!--menu section-->
    <string name="fragment_categories_menu_item_add_title">add</string>
    <string name="item_fragment_category_recycler_view_image_menu_description" translatable="false">menu icon</string>
    <string name="category_icon_description">category item</string>

    <string name="payment_title_max_length" translatable="false">150</string>
    <string name="payment_summary_max_length" translatable="false">500</string>
    <string name="payment_coast_max_length" translatable="false">15</string>
    <string name="payment_title_hint">Title</string>
    <string name="payment_cost_hint">Cost</string>
    <string name="payment_summary_hint">Add your comment here</string>
    <string name="activity_choose_category_toolbar_title">Choose category</string>
    <string name="activity_payment_no_category_hint">No category</string>


    <string name="negative_value" translatable="false">- %1$,.2f</string>
    <string name="pie_chart_center_text">Spent in this month:\n</string>
    <string name="too_much">Too much</string>
    <string name="item_payment_settings_description" translatable="false">item payment settings description</string>
    <string name="no_data_announcement">No data, yet</string>

    <!--Toasts text-->
    <string name="title_and_cost_should_not_be_empty">Fields title and cost should not be empty</string>
    <string name="payment_has_not_changed">No changes</string>
    <string name="payment_has_been_updated">Payment has been updated</string>
    <string name="new_payment_has_been_added">New payment has been added</string>


    <!--locale for currencyInstance-->
    <!--euro-->
    <string name="currency_locale_euro_language" translatable="false">fr</string>
    <string name="currency_locale_euro_country" translatable="false">FR</string>
    <!--pound-->
    <string name="currency_locale_pound_language" translatable="false">en</string>
    <string name="currency_locale_pound_country" translatable="false">GB</string>
    <!--ruble-->
    <string name="currency_locale_ruble_language" translatable="false">ru</string>
    <string name="currency_locale_ruble_country" translatable="false">RU</string>
    <!--hryvnia-->
    <string name="currency_locale_hryvnia_language" translatable="false">uk</string>
    <string name="currency_locale_hryvnia_country" translatable="false">UA</string>
    <!--dollar-->
    <string name="currency_locale_dollar_language" translatable="false">en</string>
    <string name="currency_locale_dollar_county" translatable="false">US</string>

    <string name="currency_euro_title" translatable="false">EUR  €</string>
    <string name="currency_pound_title" translatable="false">GBP  £</string>
    <string name="currency_ruble_title" translatable="false">RUB  ₽</string>
    <string name="currency_hryvnia_title" translatable="false">UAH  ₴</string>
    <string name="currency_dollar_title" translatable="false">USD  $</string>

    <!--choose currency activity-->

    <string name="choose_currency_title">Choose currency:</string>
    <string name="choose_currency_toast_message">You have to choose currency</string>
    <string name="choose_locale_currency_button_text">Choose</string>

    <!--statistic fragment-->
    <string name="statistic_current_month_menu_title">Current month</string>
    <string name="statistic_by_months_menu_title">By months</string>
    <string name="statistic_by_months_with_categories_menu_title">By months with categories</string>
    <string name="statistic_by_years_menu_title">By years</string>
    <string name="statistic_categories_menu_title">By categories</string>

    <!--months-->

    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="total">Total:\u0020</string>

</resources>
